# Travel-RT-parser

./: .env-example  Dockerfile  RESULT.md  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  sender.py  server.py
app/: models.py
app/api/: app.py  auth.py
app/api/routers/: __init__.py  auth.py  moderation.py
app/config/: db.py  settings.py
app/migrations/: 0001_initial.py  0002_auto_20260315_1755.py  0003_auto_20260319_0547.py  0004_auto_20260319_0547.py
app/models/: __init__.py  base.py  news.py
app/parsers/: __init__.py  contracts.py  http_client.py
app/parsers/sources/tatpressa/: __init__.py  detail_parser.py  list_parser.py
app/schemas/: __init__.py  auth.py  common.py  moderation.py
app/services/: __init__.py  backend_sync_service.py  ingestion_orchestrator.py  news_ingestion_service.py  similarity_service.py
